@@ -13,6 +13,7 @@ The MySQL driver is a mirror from the MySQL folks.
 Other contributors include 
 
 Alex Hornby
+Alexander Mitin
 Artiom Morozov
 Arun K Desai
 Bard Hustveit
