@@ -80,7 +80,7 @@
 
 static char const rcsid[]= "$RCSfile: SQLDataSourcesW.c,v $";
 
-#define BUFFERSIZE      1024
+#define BUFFERSIZE      1024 * 4
 
 SQLRETURN SQLDataSourcesW( SQLHENV environment_handle,
            SQLUSMALLINT direction,
