@@ -132,7 +132,7 @@ LIBLTDL=""
 AC_LIBTOOL_WIN32_DLL
 dnl AC_PROG_LIBTOOL
 
-AC_CONFIG_MACRO_DIR([libltdl/m4])
+dnl AC_CONFIG_MACRO_DIR([libltdl/m4])
 dnl LT_CONFIG_LTDL_DIR([libltdl])
 dnl LTDL_INIT
 
